--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,10 +1,33 @@
-body{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
 .app_container {
-    width: 100%;
-    font: 400 14px "Unbounded", sans-serif;
+  width: 100%;
+  font: 400 14px "Unbounded", sans-serif;
 }
 
+::-webkit-scrollbar-track {
+  background-color: #f0f0f0;
+  width: 10px;
+}
+
+::-webkit-scrollbar-track:hover {
+    scale: 1.2;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #aeaeae;
+  opacity: 0.5;
+  transition: all 0.5s ease;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  scale: 1.2;
+  cursor: pointer;
+}
+
+::-webkit-scrollbar {
+  width: 11px;
+}
