--- a/src/components/HomePage/components/HomePageFooter/HomePageFooter.module.css
+++ b/src/components/HomePage/components/HomePageFooter/HomePageFooter.module.css
@@ -42,6 +42,9 @@
     font-size: 15px;
     font-weight: 200;
     color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
     line-height: 10px;
     text-decoration: none;
 }
