--- a/src/components/HomePage/components/MainAdvantages/MainAdvantages.module.css
+++ b/src/components/HomePage/components/MainAdvantages/MainAdvantages.module.css
@@ -3,7 +3,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 60px;
+    padding-top: 60px;
+    padding-bottom: 40px;
     border-radius: 100px 100px 0 0;
     background-color: white;
     height: 550px;
@@ -19,14 +20,20 @@
 }
 
 .plusses_block{
-    width: 230px;
-    height: 270px;
+    width: 260px;
+    height: 300px;
     background-color: #F2F2F2;
     border-radius: 20px;
     padding-left: 35px;
+    padding-right: 30px;
+    box-sizing: border-box;
     animation: explanation linear;
     animation-timeline: view();
     animation-range: entry 0 ;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding-top: 40px;
 }
 
 .plusses_block p{
@@ -59,7 +66,7 @@
 }
 
 .advantages_tags p{
-    padding: 10px 15px 10px 15px;
+    padding: 12px 15px 10px 15px;
     border-radius: 20px;
 }
 
