--- a/src/components/SingIn/SingIn.module.css
+++ b/src/components/SingIn/SingIn.module.css
@@ -14,6 +14,7 @@
 .form_title{
     font-size: 48px;
     color: #2457F0;
+    padding-bottom: 35px;
 }
 
 .sing_in_form_inputs,.sing_in_form_inputs_incorrect, .sing_in_form_button{
